[lifx] Improve firmware version support
When the firmware of a light is upgraded the supported features can change.
With these changes the binding uses the features based on the light firmware version.
Also corrects some of the temperature ranges based on the LIFX products description.

Signed-off-by: Wouter Born <github@maindrain.net>