@@ -16,8 +16,9 @@ import static org.openhab.binding.lifx.internal.LifxProduct.Feature.*;
 import static org.openhab.binding.lifx.internal.LifxProduct.TemperatureRange.*;
 import static org.openhab.binding.lifx.internal.LifxProduct.Vendor.LIFX;
 
-import java.util.Arrays;
-import java.util.EnumSet;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.core.thing.ThingTypeUID;
@@ -33,75 +34,99 @@ import org.openhab.core.thing.ThingTypeUID;
 @NonNullByDefault
 public enum LifxProduct {
 
-    PRODUCT_1(1, "LIFX Original 1000", TR_2500_9000, COLOR),
-    PRODUCT_3(3, "LIFX Color 650", TR_2500_9000, COLOR),
-    PRODUCT_10(10, "LIFX White 800 (Low Voltage)", TR_2700_6500),
-    PRODUCT_11(11, "LIFX White 800 (High Voltage)", TR_2700_6500),
-    PRODUCT_15(15, "LIFX Color 1000", TR_2500_9000, COLOR),
-    PRODUCT_18(18, "LIFX White 900 BR30 (Low Voltage)", TR_2700_6500),
-    PRODUCT_19(19, "LIFX White 900 BR30 (High Voltage)", TR_2700_6500),
-    PRODUCT_20(20, "LIFX Color 1000 BR30", TR_2500_9000, COLOR),
-    PRODUCT_22(22, "LIFX Color 1000", TR_2500_9000, COLOR),
-    PRODUCT_27(27, "LIFX A19", TR_2500_9000, COLOR),
-    PRODUCT_28(28, "LIFX BR30", TR_2500_9000, COLOR),
-    PRODUCT_29(29, "LIFX A19 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_30(30, "LIFX BR30 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_31(31, "LIFX Z", TR_2500_9000, COLOR, MULTIZONE),
-    PRODUCT_32(32, "LIFX Z", TR_2500_9000, COLOR, MULTIZONE),
-    PRODUCT_36(36, "LIFX Downlight", TR_2500_9000, COLOR),
-    PRODUCT_37(37, "LIFX Downlight", TR_2500_9000, COLOR),
-    PRODUCT_38(38, "LIFX Beam", TR_2500_9000, COLOR, MULTIZONE),
-    PRODUCT_39(39, "LIFX Downlight White to Warm", TR_1500_9000),
-    PRODUCT_40(40, "LIFX Downlight", TR_2500_9000, COLOR),
-    PRODUCT_43(43, "LIFX A19", TR_2500_9000, COLOR),
-    PRODUCT_44(44, "LIFX BR30", TR_2500_9000, COLOR),
-    PRODUCT_45(45, "LIFX A19 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_46(46, "LIFX BR30 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_49(49, "LIFX Mini Color", TR_2500_9000, COLOR),
-    PRODUCT_50(50, "LIFX Mini White to Warm", TR_1500_4000),
-    PRODUCT_51(51, "LIFX Mini White", TR_2700_2700),
-    PRODUCT_52(52, "LIFX GU10", TR_2500_9000, COLOR),
-    PRODUCT_53(53, "LIFX GU10", TR_2500_9000, COLOR),
-    PRODUCT_55(55, "LIFX Tile", TR_2500_9000, CHAIN, COLOR, MATRIX, TILE_EFFECT),
-    PRODUCT_57(57, "LIFX Candle", TR_1500_9000, COLOR, MATRIX),
-    PRODUCT_59(59, "LIFX Mini Color", TR_2500_9000, COLOR),
-    PRODUCT_60(60, "LIFX Mini White to Warm", TR_1500_4000),
-    PRODUCT_61(61, "LIFX Mini White", TR_2700_2700),
-    PRODUCT_62(62, "LIFX A19", TR_2500_9000, COLOR),
-    PRODUCT_63(63, "LIFX BR30", TR_2500_9000, COLOR),
-    PRODUCT_64(64, "LIFX A19 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_65(65, "LIFX BR30 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_66(66, "LIFX Mini White", TR_2700_2700),
-    PRODUCT_68(68, "LIFX Candle", TR_1500_9000, MATRIX),
-    PRODUCT_81(81, "LIFX Candle White to Warm", TR_2200_6500),
-    PRODUCT_82(82, "LIFX Filament Clear", TR_2100_2100),
-    PRODUCT_85(85, "LIFX Filament Amber", TR_2000_2000),
-    PRODUCT_87(87, "LIFX Mini White", TR_2700_2700),
-    PRODUCT_88(88, "LIFX Mini White", TR_2700_2700),
-    PRODUCT_90(90, "LIFX Clean", TR_2500_9000, HEV),
-    PRODUCT_91(91, "LIFX Color", TR_2500_9000, COLOR),
-    PRODUCT_92(92, "LIFX Color", TR_2500_9000, COLOR),
-    PRODUCT_94(94, "LIFX BR30", TR_2500_9000, COLOR),
-    PRODUCT_96(96, "LIFX Candle White to Warm", TR_2200_6500),
-    PRODUCT_97(97, "LIFX A19", TR_2500_9000, COLOR),
-    PRODUCT_98(98, "LIFX BR30", TR_2500_9000, COLOR),
-    PRODUCT_99(99, "LIFX Clean", TR_2500_9000, HEV),
-    PRODUCT_100(100, "LIFX Filament Clear", TR_2100_2100),
-    PRODUCT_101(101, "LIFX Filament Amber", TR_2000_2000),
-    PRODUCT_109(109, "LIFX A19 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_110(110, "LIFX BR30 Night Vision", TR_2500_9000, COLOR, INFRARED),
-    PRODUCT_111(111, "LIFX A19 Night Vision", TR_2500_9000, COLOR, INFRARED);
+    PRODUCT_1(1, "LIFX Original 1000", new Features(TR_2500_9000, COLOR)),
+    PRODUCT_3(3, "LIFX Color 650", new Features(TR_2500_9000, COLOR)),
+    PRODUCT_10(10, "LIFX White 800 (Low Voltage)", new Features(TR_2700_6500)),
+    PRODUCT_11(11, "LIFX White 800 (High Voltage)", new Features(TR_2700_6500)),
+    PRODUCT_15(15, "LIFX Color 1000", new Features(TR_2500_9000, COLOR)),
+    PRODUCT_18(18, "LIFX White 900 BR30 (Low Voltage)", new Features(TR_2700_6500)),
+    PRODUCT_19(19, "LIFX White 900 BR30 (High Voltage)", new Features(TR_2700_6500)),
+    PRODUCT_20(20, "LIFX Color 1000 BR30", new Features(TR_2500_9000, COLOR)),
+    PRODUCT_22(22, "LIFX Color 1000", new Features(TR_2500_9000, COLOR)),
+    PRODUCT_27(27, "LIFX A19", new Features(TR_2500_9000, COLOR), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_28(28, "LIFX BR30", new Features(TR_2500_9000, COLOR), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_29(29, "LIFX A19 Night Vision", new Features(TR_2500_9000, COLOR, INFRARED), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_30(30, "LIFX BR30 Night Vision", new Features(TR_2500_9000, COLOR, INFRARED), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_31(31, "LIFX Z", new Features(TR_2500_9000, COLOR, MULTIZONE)),
+    PRODUCT_32(32, "LIFX Z", new Features(TR_2500_9000, COLOR, MULTIZONE), //
+            new Upgrade(2, 77, new Features(EXTENDED_MULTIZONE)), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_36(36, "LIFX Downlight", new Features(TR_2500_9000, COLOR), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_37(37, "LIFX Downlight", new Features(TR_2500_9000, COLOR), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_38(38, "LIFX Beam", new Features(TR_2500_9000, COLOR, MULTIZONE), //
+            new Upgrade(2, 77, new Features(EXTENDED_MULTIZONE)), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_39(39, "LIFX Downlight White to Warm", new Features(TR_2500_9000), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_40(40, "LIFX Downlight", new Features(TR_2500_9000, COLOR), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_43(43, "LIFX A19", new Features(TR_2500_9000, COLOR), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_44(44, "LIFX BR30", new Features(TR_2500_9000, COLOR), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_45(45, "LIFX A19 Night Vision", new Features(TR_2500_9000, COLOR, INFRARED), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_46(46, "LIFX BR30 Night Vision", new Features(TR_2500_9000, COLOR, INFRARED), //
+            new Upgrade(2, 80, new Features(TR_1500_9000))),
+    PRODUCT_49(49, "LIFX Mini Color", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_50(50, "LIFX Mini White to Warm", new Features(TR_1500_6500), //
+            new Upgrade(3, 70, new Features(TR_1500_9000))),
+    PRODUCT_51(51, "LIFX Mini White", new Features(TR_2700_2700)),
+    PRODUCT_52(52, "LIFX GU10", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_53(53, "LIFX GU10", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_55(55, "LIFX Tile", new Features(TR_2500_9000, CHAIN, COLOR, MATRIX, TILE_EFFECT)),
+    PRODUCT_57(57, "LIFX Candle", new Features(TR_1500_9000, COLOR, MATRIX)),
+    PRODUCT_59(59, "LIFX Mini Color", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_60(60, "LIFX Mini White to Warm", new Features(TR_1500_6500), //
+            new Upgrade(3, 70, new Features(TR_1500_9000))),
+    PRODUCT_61(61, "LIFX Mini White", new Features(TR_2700_2700)),
+    PRODUCT_62(62, "LIFX A19", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_63(63, "LIFX BR30", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_64(64, "LIFX A19 Night Vision", new Features(TR_1500_9000, COLOR, INFRARED)),
+    PRODUCT_65(65, "LIFX BR30 Night Vision", new Features(TR_1500_9000, COLOR, INFRARED)),
+    PRODUCT_66(66, "LIFX Mini White", new Features(TR_2700_2700)),
+    PRODUCT_68(68, "LIFX Candle", new Features(TR_1500_9000, MATRIX)),
+    PRODUCT_70(70, "LIFX Switch", new Features(BUTTONS, RELAYS)),
+    PRODUCT_71(71, "LIFX Switch", new Features(BUTTONS, RELAYS)),
+    PRODUCT_81(81, "LIFX Candle White to Warm", new Features(TR_2200_6500)),
+    PRODUCT_82(82, "LIFX Filament Clear", new Features(TR_2100_2100)),
+    PRODUCT_85(85, "LIFX Filament Amber", new Features(TR_2000_2000)),
+    PRODUCT_87(87, "LIFX Mini White", new Features(TR_2700_2700)),
+    PRODUCT_88(88, "LIFX Mini White", new Features(TR_2700_2700)),
+    PRODUCT_89(89, "LIFX Switch", new Features(BUTTONS, RELAYS)),
+    PRODUCT_90(90, "LIFX Clean", new Features(TR_1500_9000, HEV)),
+    PRODUCT_91(91, "LIFX Color", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_92(92, "LIFX Color", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_94(94, "LIFX BR30", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_96(96, "LIFX Candle White to Warm", new Features(TR_2200_6500)),
+    PRODUCT_97(97, "LIFX A19", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_98(98, "LIFX BR30", new Features(TR_1500_9000, COLOR)),
+    PRODUCT_99(99, "LIFX Clean", new Features(TR_1500_9000, HEV)),
+    PRODUCT_100(100, "LIFX Filament Clear", new Features(TR_2100_2100)),
+    PRODUCT_101(101, "LIFX Filament Amber", new Features(TR_2000_2000)),
+    PRODUCT_109(109, "LIFX A19 Night Vision", new Features(TR_1500_9000, COLOR, INFRARED)),
+    PRODUCT_110(110, "LIFX BR30 Night Vision", new Features(TR_1500_9000, COLOR, INFRARED)),
+    PRODUCT_111(111, "LIFX A19 Night Vision", new Features(TR_1500_9000, COLOR, INFRARED));
 
     /**
      * Enumerates the product features.
      */
     public enum Feature {
+        BUTTONS,
         CHAIN,
         COLOR,
+        EXTENDED_MULTIZONE,
         HEV,
         INFRARED,
         MATRIX,
         MULTIZONE,
+        RELAYS,
         TILE_EFFECT
     }
 
@@ -133,9 +158,20 @@ public enum LifxProduct {
      */
     public enum TemperatureRange {
         /**
+         * When the temperature range is not defined for {@link Upgrade}s it is inherited from the most
+         * recent firmware version.
+         */
+        NONE(0, 0),
+
+        /**
          * 1500-4000K
          */
         TR_1500_4000(1500, 4000),
+
+        /**
+         * 1500-9000K
+         */
+        TR_1500_6500(1500, 6500),
 
         /**
          * 1500-9000K
@@ -208,30 +244,70 @@ public enum LifxProduct {
         }
     }
 
+    public static class Features {
+        private TemperatureRange temperatureRange;
+        private Set<Feature> features;
+
+        private Features(Feature... features) {
+            this(NONE, features);
+        }
+
+        private Features(Features other) {
+            this(other.temperatureRange, other.features);
+        }
+
+        private Features(TemperatureRange temperatureRange, Feature... features) {
+            this.temperatureRange = temperatureRange;
+            this.features = Set.of(features);
+        }
+
+        private Features(TemperatureRange temperatureRange, Set<Feature> features) {
+            this.temperatureRange = temperatureRange;
+            this.features = Set.copyOf(features);
+        }
+
+        public TemperatureRange getTemperatureRange() {
+            return temperatureRange;
+        }
+
+        public boolean hasFeature(Feature feature) {
+            return features.contains(feature);
+        }
+
+        public void update(Features other) {
+            temperatureRange = other.temperatureRange;
+            features = other.features;
+        }
+    }
+
+    static class Upgrade {
+        final long major;
+        final long minor;
+        final Features features;
+
+        private Upgrade(long major, long minor, Features features) {
+            this.major = major;
+            this.minor = minor;
+            this.features = features;
+        }
+    }
+
     private final Vendor vendor;
     private final long id;
     private final String name;
-    private final TemperatureRange temperatureRange;
-    private final EnumSet<Feature> features = EnumSet.noneOf(Feature.class);
+    private final Features features;
+    private final List<Upgrade> upgrades;
 
-    private LifxProduct(long id, String name, TemperatureRange temperatureRange) {
-        this(LIFX, id, name, temperatureRange);
+    private LifxProduct(long id, String name, Features features, Upgrade... upgrades) {
+        this(LIFX, id, name, features, upgrades);
     }
 
-    private LifxProduct(long id, String name, TemperatureRange temperatureRange, Feature... features) {
-        this(LIFX, id, name, temperatureRange, features);
-    }
-
-    private LifxProduct(Vendor vendor, long id, String name, TemperatureRange temperatureRange) {
-        this(vendor, id, name, temperatureRange, new Feature[0]);
-    }
-
-    private LifxProduct(Vendor vendor, long id, String name, TemperatureRange temperatureRange, Feature... features) {
+    private LifxProduct(Vendor vendor, long id, String name, Features features, Upgrade... upgrades) {
         this.vendor = vendor;
         this.id = id;
         this.name = name;
-        this.temperatureRange = temperatureRange;
-        this.features.addAll(Arrays.asList(features));
+        this.features = features;
+        this.upgrades = List.of(upgrades);
     }
 
     @Override
@@ -251,8 +327,46 @@ public enum LifxProduct {
         return name;
     }
 
-    public TemperatureRange getTemperatureRange() {
-        return temperatureRange;
+    /**
+     * Returns the features of the initial product firmware version.
+     *
+     * @return the initial features
+     */
+    public Features getFeatures() {
+        return new Features(features);
+    }
+
+    /**
+     * Returns the features for a specific product firmware version.
+     *
+     * @param version the firmware version
+     * @return the composite features of all firmware upgrades for the given major and minor firmware version
+     */
+    public Features getFeatures(String version) {
+        if (upgrades.isEmpty() || !version.contains(".")) {
+            return new Features(features);
+        }
+
+        String[] majorMinorVersion = version.split("\\.");
+        long major = Long.valueOf(majorMinorVersion[0]);
+        long minor = Long.valueOf(majorMinorVersion[1]);
+
+        TemperatureRange temperatureRange = features.temperatureRange;
+        Set<Feature> features = new HashSet<>(this.features.features);
+
+        for (Upgrade upgrade : upgrades) {
+            if (upgrade.major < major || (upgrade.major == major && upgrade.minor <= minor)) {
+                Features upgradeFeatures = upgrade.features;
+                if (upgradeFeatures.temperatureRange != NONE) {
+                    temperatureRange = upgradeFeatures.temperatureRange;
+                }
+                features.addAll(upgradeFeatures.features);
+            } else {
+                break;
+            }
+        }
+
+        return new Features(temperatureRange, features);
     }
 
     public ThingTypeUID getThingTypeUID() {
@@ -271,8 +385,8 @@ public enum LifxProduct {
         }
     }
 
-    public boolean hasFeature(Feature feature) {
-        return features.contains(feature);
+    private boolean hasFeature(Feature feature) {
+        return features.hasFeature(feature);
     }
 
     /**
@@ -307,5 +421,13 @@ public enum LifxProduct {
         }
 
         throw new IllegalArgumentException(id + " is not a valid product ID");
+    }
+
+    List<Upgrade> getUpgrades() {
+        return upgrades;
+    }
+
+    public boolean isLight() {
+        return !features.hasFeature(Feature.BUTTONS) && !features.hasFeature(Feature.RELAYS);
     }
 }
